RbA Build/src/objects/Support_Log__c.object
<CustomObject>
    <description>This will hold log information for errors that occur in the system.  Debug logs can hold the info but are generally not turned on and error then are not necessarily captured</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>Application this error record is related to</description>
        <inlineHelpText>Select the application this error record is related to</inlineHelpText>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>RMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Map Anything</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GroundForce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>detailed error information</description>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>short description of what was being attempted</description>
        <inlineHelpText>enter a short description of what was being attempted</inlineHelpText>
        <label>Operation</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User when the error occured</description>
        <inlineHelpText>User when the error occurred</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rSuite_API_Payload__c</fullName>
        <description>holds API payload - input or output</description>
        <inlineHelpText>rSuite api data</inlineHelpText>
        <label>rSuite API Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Support Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Operation__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SL-{00000000}</displayFormat>
        <label>Support Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>